--- a/views/urlsubmitted.html
+++ b/views/urlsubmitted.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="div">
         <p>단축 완료!</p>
         <input disabled style="width: 100%;"></input>
         <button onclick="copy()" id="copy">복사</button>
