--- a/views/submitted.css
+++ b/views/submitted.css
@@ -21,8 +21,12 @@ p {
 }
 
 div {
+  border-radius: 0.4rem !important;
+}
+
+.div {
   margin-top: 23vh;
-  border-radius: 5px;
+  border-radius: 5px !important;
   border: 1px solid #000;
   text-align: center !important;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
