--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZZAM.tech</title>
+  <title>URL 단축</title>
   <link rel="stylesheet" href="style.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -13,6 +13,7 @@
 
 <body>
   <div class="form">
+    <h1>ZZAM.tech</h1>
     <p>단축할 URL</p>
     <input type="text" placeholder="https://example.com" required id="urlinput" />
     <div class="customurl">
