custom url length limit

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
     </div>
     <button type="submit">단축!</button>
   </div>
+  <footer>made by sungho0205.</footer>
   <script src="./script.js"></script>
 </body>
 
