--- a/views/style.css
+++ b/views/style.css
@@ -97,6 +97,10 @@ body {
 
 h1 {
   margin-top: 0;
+  text-align: left !important;
+  font-weight: 900;
+  font-family: 'Spoqa Han Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 footer {
   position: fixed;
