--- a/views/style.css
+++ b/views/style.css
@@ -21,7 +21,7 @@ input[type='text'] {
   border: 1px solid gray;
   padding: 10px;
   border-radius: 10px;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 input:focus {
@@ -44,19 +44,21 @@ label {
   text-align: left !important;
 }
 input[type='checkbox'] {
-  background-color: #65769a !important;
-  margin-bottom: 20px;
-  border-radius: 50px;
+  background-color: #65769a;
+  margin-bottom: 5px !important;
+  margin-top: 17px !important;
 }
 button {
   background: none;
   border-left: none;
   background-color: #65769a;
-  width: 95%;
+  width: 100%;
   height: 40px;
   border-radius: 10px;
   border: none;
   color: white;
+  font-weight: 300;
+  font-size: 16px;
 }
 .form {
   margin-top: 15%;
@@ -69,6 +71,7 @@ button {
   display: inline-block;
   padding: 2rem;
   width: 40%;
+  padding-bottom: 13px;
 }
 p {
   margin: 0;
@@ -106,4 +109,45 @@ footer {
   position: fixed;
   bottom: 0.75rem;
   right: 0.75rem;
+}
+
+[type='checkbox']:focus {
+  outline: none;
+}
+
+[type='checkbox']:checked {
+  color: #65769a;
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e") !important;
+  border-color: transparent;
+  background-color: #65769a !important;
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 0;
+}
+
+[type='checkbox'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 0;
+  -webkit-print-color-adjust: exact;
+  color-adjust: exact;
+  display: inline-block;
+  vertical-align: bottom;
+  background-origin: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  flex-shrink: 0;
+  height: 1rem;
+  width: 1rem;
+  color: white !important;
+  background-color: white !important;
+  border-width: 1px;
+  border-radius: 0.25rem !important;
+  margin-left: 5px;
+  border: 1px solid gray;
+  --tw-border-opacity: 1;
 }
