--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>URL 단축</title>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>URL 단축</title>
-  <link rel="stylesheet" href="style.css" />
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-</head>
-
-<body>
-  <div class="form">
-    <h1>ZZAM.tech</h1>
-    <p>단축할 URL</p>
-    <input type="text" placeholder="https://example.com" required id="urlinput" />
-    <div class="custom">
-      <p id="customp">커스텀 URL</p>
-      <input type="text" placeholder="커스텀 URL" required id="customurl" />
-      <br />
+  <body>
+    <div class="form">
+      <h1>URL 단축기</h1>
+      <p>단축할 URL</p>
+      <div class="urlinput">
+        <input
+          type="text"
+          placeholder="https://example.com"
+          required
+          id="urlinput"
+        />
+      </div>
+      <div class="custom">
+        <p id="customp">커스텀 URL</p>
+        <input type="text" placeholder="커스텀 URL" required id="customurl" />
+      </div>
+      <div class="submit">
+        <button type="submit">단축!</button>
+      </div>
+      <div class="customurl">
+        <label for="customurlcheckbox">커스텀 URL 사용</label
+        ><input type="checkbox" name="커스텀 URL 사용" id="customurlcheckbox" />
+      </div>
     </div>
-    <button type="submit">단축!</button>
-    <div class="customurl">
-      <label for="customurlcheckbox">커스텀 URL 사용</label><input type="checkbox" name="커스텀 URL 사용"
-        id="customurlcheckbox" />
-    </div>
-  </div>
-  <footer>made by sungho0205.</footer>
-  <script src="./script.js"></script>
-</body>
-
+    <footer>made by sungho0205.</footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
