--- a/views/style.css
+++ b/views/style.css
@@ -4,24 +4,16 @@
   text-align: center !important;
   font-family: Poppins, 'Spoqa Han Sans Neo', -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif !important;
+  box-sizing: border-box;
 }
 body {
   position: relative;
   background-color: #fff;
-  height: 100vh;
+  height: 100%;
 }
 input {
   border: none;
-}
-input[type='text'] {
-  outline: none;
-  width: 95%;
-  background: transparent;
-  border: 1px solid gray;
-  padding: 10px;
-  border-radius: 10px;
-  margin-bottom: 10px;
 }
 
 input:focus {
@@ -31,6 +23,29 @@ input:focus {
 button:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
+button {
+  height: 40px;
+  border-radius: 10px;
+  width: 100% !important;
+  background: none;
+  border-left: none;
+  background-color: #65769a;
+  border: none;
+  color: white;
+  font-weight: 300;
+  font-size: 16px;
+}
+input[type='text'] {
+  background: transparent;
+  border: 1px solid gray;
+  width: 100% !important;
+  padding: 0;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  outline: none;
+  height: 40px;
+}
+
 input[type='text']::placeholder {
   color: gray;
   font-weight: 300;
@@ -48,29 +63,18 @@ input[type='checkbox'] {
   margin-bottom: 5px !important;
   margin-top: 17px !important;
 }
-button {
-  background: none;
-  border-left: none;
-  background-color: #65769a;
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  border: none;
-  color: white;
-  font-weight: 300;
-  font-size: 16px;
-}
+
 .form {
   margin-top: 15%;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid #000;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background-color: #fff;
-  height: 40%;
-  text-align: center;
-  display: inline-block;
+  height: 37vh;
+  text-align: center !important;
+  display: inline-table;
   padding: 2rem;
-  width: 40%;
+  width: 60vw;
   padding-bottom: 13px;
 }
 p {
@@ -83,7 +87,6 @@ body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 1300% 1300%;
   animation: gradient 15s ease infinite;
-  height: 100%;
 }
 
 @keyframes gradient {
